@@ -1,0 +1,93 @@
+/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+ * Copyright (c) 2003-2007 by AG-Software 											 *
+ * All Rights Reserved.																 *
+ * Contact information for AG-Software is available at http://www.ag-software.de	 *
+ *																					 *
+ * Licence:																			 *
+ * The agsXMPP SDK is released under a dual licence									 *
+ * agsXMPP can be used under either of two licences									 *
+ * 																					 *
+ * A commercial licence which is probably the most appropriate for commercial 		 *
+ * corporate use and closed source projects. 										 *
+ *																					 *
+ * The GNU Public License (GPL) is probably most appropriate for inclusion in		 *
+ * other open source projects.														 *
+ *																					 *
+ * See README.html for details.														 *
+ *																					 *
+ * For general enquiries visit our website at:										 *
+ * http://www.ag-software.de														 *
+ * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
+
+using System;
+using System.Text;
+
+using agsXMPP.Xml.Dom;
+
+namespace agsXMPP.protocol.extensions.ibb
+{
+    /*
+         <data xmlns='http://jabber.org/protocol/ibb' sid='mySID' seq='0'>
+            qANQR1DBwU4DX7jmYZnncmUQB/9KuKBddzQH+tZ1ZywKK0yHKnq57kWq+RFtQdCJ
+            WpdWpR0uQsuJe7+vh3NWn59/gTc5MDlX8dS9p0ovStmNcyLhxVgmqS8ZKhsblVeu
+            IpQ0JgavABqibJolc3BKrVtVV1igKiX/N7Pi8RtY1K18toaMDhdEfhBRzO/XB0+P
+            AQhYlRjNacGcslkhXqNjK5Va4tuOAPy2n1Q8UUrHbUd0g+xJ9Bm0G0LZXyvCWyKH
+            kuNEHFQiLuCY6Iv0myq6iX6tjuHehZlFSh80b5BVV9tNLwNR5Eqz1klxMhoghJOA
+         </data>
+      
+         <xs:element name='data'>
+             <xs:complexType>
+              <xs:simpleContent>
+                <xs:extension base='xs:string'>
+                  <xs:attribute name='sid' type='xs:string' use='required'/>
+                  <xs:attribute name='seq' type='xs:string' use='required'/>
+                </xs:extension>
+              </xs:simpleContent>
+             </xs:complexType>
+           </xs:element>
+    */
+
+    /// <summary>
+    /// 
+    /// </summary>
+    public class Data : Element
+    {
+        /// <summary>
+        /// 
+        /// </summary>
+        public Data()
+        {
+            this.TagName    = "data";
+            this.Namespace  = Uri.IBB;
+        }
+
+        /// <summary>
+        /// 
+        /// </summary>
+        /// <param name="sid"></param>
+        /// <param name="seq"></param>
+        public Data(string sid, int seq)  : this()
+        {
+            this.Sid        = sid;
+            this.Sequence   = seq;
+        }
+
+        /// <summary>
+        /// Sid
+        /// </summary>
+        public string Sid
+        {
+            get { return GetAttribute("sid"); }
+            set { SetAttribute("sid", value); }
+        }
+
+        /// <summary>
+        /// the sequence
+        /// </summary>
+        public int Sequence
+        {
+            get { return GetAttributeInt("seq"); }
+            set { SetAttribute("seq", value); }
+        }
+    }
+}
